objects/Field_Trip__Field_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Field_Trip__Field_Created_Date__c</fullName>
        <description>Not functional in current version... reserved for use in future release.</description>
        <label>Field Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Object_Analysis__c</fullName>
        <label>Object Analysis</label>
        <referenceTo>Field_Trip__Object_Analysis__c</referenceTo>
        <relationshipLabel>Field Analyses</relationshipLabel>
        <relationshipName>Field_Analyses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Populated_On_Percent__c</fullName>
        <formula>VALUE(
IF(Field_Trip__Object_Analysis__r.Field_Trip__Records__c = 0, &quot;&quot;, TEXT(Field_Trip__Populated_On__c /  Field_Trip__Object_Analysis__r.Field_Trip__Records__c) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Populated On (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Populated_On__c</fullName>
        <label>Populated On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Total_Tally__c</fullName>
        <label>Total Tally (Temporary)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>anytype</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>base64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combobox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DateTime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MultiPicklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TextArea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Trip__isCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Trip__isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>